[tool.poetry]
name = "ikea-click-and-meet-slot-finder"
version = "0.1.0"
description = ""
authors = ["Karthikeya Udupa <karthikeyaudupa@fmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
